Changes in sparseLTSEigen version 0.1.2

    + Bugfix in fastSparseLTS() for more stability of the results.


Changes in sparseLTSEigen version 0.1.1

    + Parallel computing is now available via OpenMP.

    + Adapted example to those of package robustHD.