@@ -1,9 +1,11 @@
 \name{sparseLTSEigen-package}
 \alias{sparseLTSEigen-package}
 \alias{sparseLTSEigen}
+\alias{.CallSparseLTSEigen}
 \docType{package}
 \title{
-RcppEigen back end for sparse least trimmed squares regression
+RcppEigen back end for sparse least trimmed squares
+regression
 }
 \description{
 Use RcppEigen to fit least trimmed squares
@@ -15,8 +17,8 @@ Use RcppEigen to fit least trimmed squares
 Package: \tab sparseLTSEigen\cr
 Type: \tab Package\cr
 Version: \tab 0.1.2\cr
-Date: \tab 2013-03-11\cr
-Depends: \tab Rcpp (>= 0.9.10), robustHD (>= 0.2.0)\cr
+Date: \tab 2013-03-12\cr
+Depends: \tab Rcpp (>= 0.9.10), robustHD (>= 0.3.0)\cr
 Imports: \tab RcppEigen (>= 0.2.0)\cr
 Suggests: \tab mvtnorm\cr
 LinkingTo: \tab Rcpp, RcppEigen\cr
