@@ -1,5 +1,9 @@
 Changes in sparseLTSEigen version 0.1.2
 
+    + Redesign of how C++ back end is called from package 'robustHD'.
+    
+    + Adapted C++ code to new version of package 'robustHD'.
+    
     + Bugfix in fastSparseLTS() for more stability of the results.
 
 
